--- a/public/CSS/generalLayout.css
+++ b/public/CSS/generalLayout.css
@@ -187,7 +187,7 @@ p {
     text-shadow: 1px 1px 0px #fff;
 }
 
-input[type=text] {
+input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
